--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,8 +1,40 @@
 .formMovie {
+  background-color: #313131;
+  padding: 30px;
+  display: flex;
+  align-items: center;
 }
 
 .inputMovie {
+  min-width: 350px;
+  padding: 10px;
+  padding-left: 15px;
+  margin-right: 15px;
+  border-radius: 12px;
+  border: 1px solid #fff;
+  font-size: 16px;
+  color: #fff;
+  background-color: #505050;
+  outline: none;
+  transition: border 0.3s ease, border-radius 0.3s ease;
+}
+.inputMovie:is(:hover, :focus) {
+  border-radius: 12px;
+  border: 1px solid #ff5100;
 }
 
 .buttonMovie {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 12px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #ff5100;
+  cursor: pointer;
+  outline: none;
+  transition: background-color 0.3s ease;
+}
+
+.buttonMovie:hover {
+  background-color: #b93d03;
 }
