--- a/src/pages/MoviesPage/MoviesPage.module.css
+++ b/src/pages/MoviesPage/MoviesPage.module.css
@@ -22,12 +22,12 @@
 }
 
 .noResults {
-  /* position: fixed; */
+  width: 100%;
+  height: 100%;
   justify-content: center;
   align-items: center;
   padding: 20px;
   background-color: #313131;
   font-size: 45px;
   color: #fff;
-  z-index: 999;
 }
